--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
+    "next-cloudinary": "^6.0.1",
     "next-themes": "^0.2.1",
     "query-string": "^9.0.0",
     "react": "^18",
